<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?attr/selectableItemBackground">

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="8dp"
    android:ellipsize="end"
    android:maxLines="3"
    android:textAppearance="?attr/textAppearanceListItem"
    app:layout_constrainedWidth="true"
    app:layout_constraintBottom_toTopOf="@id/volume_button"
    app:layout_constraintEnd_toStartOf="@id/icon"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1"
    tools:text="Sound Title" />

  <Button
    android:id="@+id/volume_button"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    app:icon="@drawable/ic_action_volume"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="25%" />

  <Button
    android:id="@+id/time_period_button"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:textAllCaps="false"
    app:icon="@drawable/ic_action_time_period"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@id/volume_button"
    tools:text="2m 10s" />

  <ImageView
    android:id="@+id/icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:adjustViewBounds="true"
    android:alpha="0.2"
    android:elevation="-1dp"
    android:maxHeight="135dp"
    android:scaleType="fitEnd"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/sound_icon"
    tools:ignore="ContentDescription"
    tools:src="@drawable/ic_sound_birds" />

  <ImageView
    android:id="@+id/play_indicator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_noti_play"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="?attr/colorPrimary"
    tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
