...
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="pause">Pause</string>
    <string name="preset_already_exists">A preset with that name already exists. Try a different one!</string>
    <string name="preset_name_cannot_be_empty">The preset name is missing. Please enter a unique one!</string>
    <string name="preset_saved">Awesome! Your preset has been saved.</string>
    <string name="save">Save</string>
    <string name="save_preset">Save Preset</string>
    <string name="play">Play</string>
    <string name="play_pause">play or pause</string>
    <string name="stop">Stop</string>
    <string name="volume">Sound volume</string>
    <string name="add_to_home_screen">Add to home screen</string>
...
